pixie/pixie-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pixie-deployment
spec:
  replicas: 1 # Adjust the number of replicas as needed
  selector:
    matchLabels:
      app: pixie
  template:
    metadata:
      labels:
        app: pixie
    spec:
      containers:
        - name: pixie
          image: mythrion/pixie:latest
          imagePullPolicy: Never
          volumeMounts:
            - name: local-storage
              mountPath: /mnt/models
      restartPolicy: Always
      volumes:
        - name: local-storage
          persistentVolumeClaim:
            claimName: pixie-pvc
