pixie/pixie-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pixie-service
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  selector:
    app: pixie
