pixie/pixie-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pixie-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: api.mythrion.local # Update with your desired host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pixie-service
                port:
                  number: 80
